# BattleLM

./: .gitignore  README.md
bridge/: qwen-bridge.mjs
flutter_app/: Cargo.toml  README.md  pubspec.yaml  tauri.conf.json
flutter_app/android/app/: build.gradle
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/app/: app_state.dart  battlelm_app.dart
flutter_app/lib/core/local/: asset_bridge.dart  local_engine.dart
flutter_app/lib/core/models/: ai_instance.dart  enums.dart  group_chat.dart  message.dart  models.dart  remote_models.dart
flutter_app/lib/core/remote/: device_identity.dart  remote_connection.dart  remote_protocol.dart
flutter_app/lib/core/services/: services.dart  storage_service.dart  websocket_service.dart
flutter_app/lib/features/chat/: chat_view.dart
flutter_app/lib/features/home/: home_view.dart
flutter_app/lib/features/shell/: shell_view.dart
flutter_app/lib/features/sidebar/: sidebar_view.dart
flutter_app/linux/: CMakeLists.txt  my_application.cc
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/src/: lib.rs
flutter_app/src/process_manager/: mod.rs
flutter_app/src/pty/: mod.rs
flutter_app/src/storage/: mod.rs
flutter_app/src/token_monitor/: mod.rs
flutter_app/src/websocket/: mod.rs
flutter_app/test/: widget_test.dart
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
(+65 files in other folders)
