[package]
name = "battle_lm_core"
version = "1.0.0"
edition = "2021"

[lib]
name = "battle_lm_core"
crate-type = ["lib", "cdylib"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Path handling
dirs = "6"

[features]
default = []
standalone = []

[profile.release]
lto = true
opt-level = "z"
strip = true
